Expand Textured Block api to provide common invisible block, expose baking chunk in ChunkAttachment, add overridable methods for when attachment is set or removed, make ElementHolders tick for spectators, stop logging ItemGroup errors unless requested in config